[project]
name = "game-theory"
version = "0.1.0"
description = ""
authors = [
    {name = "Maurizio Polizzi"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13.3"
dependencies = [
    "annotated-types (==0.7.0)",
    "anthropic (==0.49.0)",
    "anyio (==4.9.0)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "distro (==1.9.0)",
    "filelock (==3.18.0)",
    "fsspec (==2025.3.2)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.8)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.30.2)",
    "idna (==3.10)",
    "jinja2 (==3.1.6)",
    "jiter (==0.9.0)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "langchain (==0.3.23)",
    "langchain-anthropic (==0.3.10)",
    "langchain-core (==0.3.51)",
    "langchain-openai (==0.3.12)",
    "langchain-text-splitters (==0.3.8)",
    "langgraph (==0.3.29)",
    "langgraph-checkpoint (==2.0.24)",
    "langgraph-prebuilt (==0.1.8)",
    "langgraph-sdk (==0.1.61)",
    "langsmith (==0.3.30)",
    "markupsafe (==3.0.2)",
    "mpmath (==1.3.0)",
    "networkx (==3.4.2)",
    "numpy (==2.2.4)",
    "openai (==1.73.0)",
    "orjson (==3.10.16)",
    "ormsgpack (==1.9.1)",
    "packaging (==24.2)",
    "pydantic (==2.11.3)",
    "pydantic-core (==2.33.1)",
    "pyyaml (==6.0.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "safetensors (==0.5.3)",
    "setuptools (==78.1.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.40)",
    "sympy (==1.13.1)",
    "tenacity (==9.1.2)",
    "tiktoken (==0.9.0)",
    "tokenizers (==0.21.1)",
    "torch (==2.6.0)",
    "tqdm (==4.67.1)",
    "transformers (==4.51.3)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "xxhash (==3.5.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
